--- a/javascript/dom/dom11-resizesvg.html
+++ b/javascript/dom/dom11-resizesvg.html
@@ -37,7 +37,7 @@
    <div class = "main">
       <svg id="area" width="100%" height="100%">
          <g id="group-move" transform = "translate(0,0)">
-           <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" />
+           <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" />
          <!-- <svg id="area2" width="100%" height="100%" x = 0 y = 0> -->
            <rect id="square" class="pointerDiff visible" x= 95 y= 95 width= "8" height= "8" />
         </g>
