trying to do the 3 new growSquares

--- a/javascript/dom/dom11-resizesvg.html
+++ b/javascript/dom/dom11-resizesvg.html
@@ -21,11 +21,16 @@
       top: 0px;
       left: 0px;
    }
-   .pointerDiff{
-            visibility: hidden;
-            fill: blue;
-            cursor: nwse-resize
-        }
+   .pointerDiffR{
+        visibility: hidden;
+        fill: blue;
+        cursor: nwse-resize
+    }
+    .pointerDiffL{
+        visibility: hidden;
+        fill: blue;
+        cursor: nesw-resize
+    }
      .visible{
          visibility: visible
      }
@@ -37,9 +42,12 @@
    <div class = "main">
       <svg id="area" width="100%" height="100%">
          <g id="group-move" transform = "translate(0,0)">
-           <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" />
+           <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" x="5" y ="5" />
          <!-- <svg id="area2" width="100%" height="100%" x = 0 y = 0> -->
-           <rect id="square" class="pointerDiff visible" x= 95 y= 95 width= "8" height= "8" />
+           <rect id="squareBR" class="pointerDiffR visible" x= 95 y= 95 width= "8" height= "8" />
+           <rect id="squareTL" class="pointerDiffR visible" x= 0 y= 0 width= "8" height= "8" />
+           <rect id="squareBL" class="pointerDiffL visible" x= 0 y= 95 width= "8" height= "8" />
+           <rect id="squareTR" class="pointerDiffL visible" x= 95 y= 0 width= "8" height= "8" />
         </g>
          <!-- </svg> -->
       </svg>
