control now works with any image

--- a/javascript/dom/dom11-resizesvg.html
+++ b/javascript/dom/dom11-resizesvg.html
@@ -10,7 +10,6 @@
         top: 5px;
         right: 5px;
         bottom: 5px;
-        /* background-image: url(images/virus.png); */
     }
     #movel{
         position: absolute;
@@ -19,7 +18,7 @@
     }
    .pointerDiffR{
         visibility: hidden;
-        fill:green;
+        fill:blue;
         cursor: nwse-resize
     }
     .pointerDiffL{
@@ -30,7 +29,6 @@
     .visible{
         visibility: visible
     }
-
    </style>
 </head>
 
@@ -38,15 +36,13 @@
    <div class = "main" >
       <svg id="area" width="100%" height="100%">
          <g id="group-move" transform = "translate(0,0)">
+            <g id="image-inside" transform="translate(0,0)" z="0">
+                <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" x="5" y ="5" />
+            </g>
            <rect id="squareBR" class="pointerDiffR visible" x= 95 y= 95 width= "8" height= "8" />
            <rect id="squareTL" class="pointerDiffR visible" x= 0 y= 0 width= "8" height= "8" />
            <rect id="squareBL" class="pointerDiffL visible" x= 0 y= 95 width= "8" height= "8" />
            <rect id="squareTR" class="pointerDiffL visible" x= 95 y= 0 width= "8" height= "8" />
-           
-           <g id="image-inside" transform="translate(0,0)">
-            <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" x="5" y ="5" />
-           </g>
-           
         </g>
       </svg>
    </div>
