--- a/javascript/dom/dom11-resizesvg.html
+++ b/javascript/dom/dom11-resizesvg.html
@@ -32,8 +32,10 @@
    </style>
 </head>
 
-<body onload="Start()">
+<body>
    <div class = "main" >
+       <button class = "button" type = "button" onclick="new Movel('quadrado')"> quadrado </button>
+        <button class="button" type="button" onclick="new Movel('circulo')"> circulo </button>
       <svg id="area" width="100%" height="100%">
          <g id="group-move" transform = "translate(0,0)">
             <g id="image-inside" transform="translate(0,0)" z="0">
