--- a/javascript/dom/dom11-resizesvg.html
+++ b/javascript/dom/dom11-resizesvg.html
@@ -35,14 +35,14 @@
 <body onload="Start()">
    <div class = "main" >
       <svg id="area" width="100%" height="100%">
-         <g id="group-move" transform = "translate(0,0)">
-            <g id="image-inside" transform="translate(0,0)">
-                <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" x="5" y ="5" />
+         <g id="group-move" transform = "translate(8,8)">
+            <g id="image-inside" transform="translate(5,5)">
+                <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" />
             </g>
-           <rect id="squareBR" class="pointerDiffR visible" x= 95 y= 95 width= "8" height= "8" />
-           <rect id="squareTL" class="pointerDiffR visible" x= 0 y= 0 width= "8" height= "8" />
-           <rect id="squareBL" class="pointerDiffL visible" x= 0 y= 95 width= "8" height= "8" />
-           <rect id="squareTR" class="pointerDiffL visible" x= 95 y= 0 width= "8" height= "8" />
+           <rect id="squareBR" class="pointerDiffR visible" x= 96 y= 96 width= "8" height= "8" />
+           <rect id="squareTL" class="pointerDiffR visible" x= 5 y= 5 width= "8" height= "8" />
+           <rect id="squareBL" class="pointerDiffL visible" x= 5 y= 96 width= "8" height= "8" />
+           <rect id="squareTR" class="pointerDiffL visible" x= 96 y= 5 width= "8" height= "8" />
         </g>
       </svg>
    </div>
