--- a/javascript/dom/dom11-resizesvg.html
+++ b/javascript/dom/dom11-resizesvg.html
@@ -62,8 +62,6 @@
       Basic.service.rootPath = "../../";
    </script>
    <div class = "main" >
-       <button class = "button" type = "button" onclick="new Movel('quadrado')"> quadrado </button>
-        <button class="button" type="button" onclick="new Movel('circulo')"> circulo </button>
       <svg id="area" width="100%" height="100%">
          <g id="group-move" transform = "translate(8,8)">
             <g id="image-inside" transform="translate(5,5)">
@@ -79,6 +77,10 @@
    <div>
      <dcc-trigger label="Circle" action="control/create/circle">
      </dcc-trigger>
+  </div>
+  <div>
+    <dcc-trigger label="Square" action="control/create/square">
+    </dcc-trigger>
   </div>
 </body>
 
