--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -24,7 +24,7 @@
    <script src="../../dccs/components/dcc-compute.js"></script>
    <script src="../../dccs/components/dcc-report.js"></script>
 
-   <script type="text/javascript"  src="src/resizesvg.js"></script>
+   <script type="text/javascript"  src="src/editor.js</script>
 
    <style>
     .main{
