Public and private set

--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -24,7 +24,7 @@
    <script src="../../dccs/components/dcc-compute.js"></script>
    <script src="../../dccs/components/dcc-report.js"></script>
 
-   <script type="text/javascript"  src="src/editor.js</script>
+   <script type="text/javascript"  src="src/editor.js"></script>
 
    <style>
     .main{
@@ -65,7 +65,6 @@
       <svg id="area" width="100%" height="100%">
          <g id="group-move" transform = "translate(8,8)">
             <g id="image-inside" transform="translate(5,5)">
-                <image xlink:href="images/procurar.svg" id = "move" width="100px" height="100px" preserveAspectRatio="none" />
             </g>
            <rect id="squareBR" class="pointerDiffR visible" x= 96 y= 96 width= "8" height= "8" />
            <rect id="squareTL" class="pointerDiffR visible" x= 5 y= 5 width= "8" height= "8" />
