Fixed circle and square movement and little square positions for BR. Control almost there

--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -29,8 +29,8 @@
    <style>
     .main{
         position: absolute;
-        left: 100px;
-        top: 5px;
+        left: 0px;
+        top: 70px;
         right: 5px;
         bottom: 5px;
     }
@@ -63,14 +63,16 @@
    </script>
    <div class = "main" >
    </div>
-   <div>
+   <div id="dccs">
      <dcc-trigger label="Circle" action="control/create/circle">
      </dcc-trigger>
+     <dcc-trigger label="Square" action="control/create/square">
+     </dcc-trigger>
   </div>
-  <div>
+  <!-- <div>
     <dcc-trigger label="Square" action="control/create/square">
     </dcc-trigger>
-  </div>
+  </div> -->
 </body>
 
 </html>
