--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -27,9 +27,9 @@
    <script type="text/javascript"  src="src/editor.js"></script>
 
    <style>
-       /*#body{
+       #body{
            background: url("images/background.png");
-       }*/
+       }
     .main{
         position: absolute;
         left: 0px;
