--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -28,7 +28,7 @@
 
    <style>
        #body{
-           background: url("images/background.png");
+           background: url("images/background.jpg");
        }
     .main{
         position: absolute;
