--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -59,12 +59,12 @@
 </head>
 
 
-<body id = "body" onload="Movel.instance.start()">
+<body onload="Movel.instance.start()">
    <script>
       MessageBus.page = new MessageBus(false);
       Basic.service.rootPath = "../../";
    </script>
-   <div class = "main" >
+   <div class = "main" id = "body" >
    </div>
    <div id="dccs">
      <dcc-trigger label="Circle" action="control/create/circle">
