Background image now fill the entire page

--- a/javascript/dom/editor.html
+++ b/javascript/dom/editor.html
@@ -28,7 +28,11 @@
 
    <style>
        #body{
-           background: url("images/background.jpg");
+           background: url("images/background.jpg") no-repeat center center fixed;
+           -webkit-background-size: cover;
+           -moz-background-size: cover;
+           -o-background-size: cover;
+           background-size: cover;
        }
     .main{
         position: absolute;
