feat (retejs): adjustable environment

--- a/javascript/retejs/editor02-adjust.html
+++ b/javascript/retejs/editor02-adjust.html
@@ -2,16 +2,17 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <title>Rete Basic Example</title>
+   <title>Rete Autoadjust</title>
 
    <script src="lib/rete.min.js"></script>
    <script src="lib/vue.min.js"></script>
    <script src='lib/vue-render-plugin.min.js'></script>
    <script src="lib/connection-plugin.min.js"></script>
    <script src="lib/area-plugin.min.js"></script>
-
-   <script src="js/blocks-01-simple.js"></script>
-   <script src="js/author-01-simple.js"></script>
+   <script src="lib/auto-arrange-plugin.min.js"></script>
+   
+   <script src="js/blocks-02-adjust.js"></script>
+   <script src="js/author-02-adjust.js"></script>
 </head>
 <body onload="AuthorFlowManager.s.start(700, 500)">
    <div style="width:700px;height:500px">
