--- a/frameworks/eslint/index.html
+++ b/frameworks/eslint/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>Fill with Zeros</title>
   </head>
   <body>
-    <script src="main.js"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
