feat (web): new slides and examples

--- a/web/basics/04-styles.html
+++ b/web/basics/04-styles.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1 style="font-family:Arial">Dinosaur Story</h1>
-    <p style="color:blue">
+    <p style="color:blue;font-size:16pt">
       The <b style="color:green">dinosaur jumped</b> into the mud.
     </p>
   </body>
