--- a/web/basics/06-2-div.html
+++ b/web/basics/06-2-div.html
@@ -8,7 +8,7 @@
     <p>Author: <span id="author">Asdrubal</span></p>
     <div class="story">
       <h1>Dinosaur Story</h1>
-      <p>The <span class="emphasis">dinosaur jumped</span> into the mud.</p>
+      <p>The dinosaur jumped into the mud.</p>
     </div>
   </body>
 </html>
