refactor (javascript): scripts outside pages

--- a/javascript/basics/05-1-if.html
+++ b/javascript/basics/05-1-if.html
@@ -2,15 +2,7 @@
 <html>
   <body>
     JavaScript learning - look at the console.
-    <script>
-      const coin1 = Math.random(),
-            coin2 = Math.random()
-      console.log('coin 1: ' + coin1)
-      console.log('coin 2: ' + coin2)
-      if (coin1 < 0.5 && coin2 < 0.5) {
-        console.log('heads and heads')
-        console.log('you win')
-      }
+    <script type="text/javascript" src="js/05-1-if.js">
     </script>
   </body>
 </html>
