--- a/javascript/basics/06-2-do-while.html
+++ b/javascript/basics/06-2-do-while.html
@@ -2,14 +2,7 @@
 <html>
   <body>
     JavaScript learning - look at the console.
-    <script>
-      let week = 0
-      const limit = Math.trunc(Math.random() * 8)
-      console.log('limit: ' + limit)
-      do {
-        week++
-        console.log('weekday: ' + week)
-      } while (week < limit)
+    <script type="text/javascript" src="js/06-2-do-while.js">
     </script>
   </body>
 </html>
