--- a/javascript/basics/06-3-for.html
+++ b/javascript/basics/06-3-for.html
@@ -2,11 +2,7 @@
 <html>
   <body>
     JavaScript learning - look at the console.
-    <script>
-      const limit = Math.trunc(Math.random() * 8)
-      console.log('limit: ' + limit)
-      for (let day = 1; day <= limit; day++)
-        console.log('weekday: ' + day)
+    <script type="text/javascript" src="js/06-3-for.js">
     </script>
   </body>
 </html>
