update (blockly): new sequence example

--- a/frameworks/blockly/index.html
+++ b/frameworks/blockly/index.html
@@ -9,6 +9,7 @@
     <xml id="toolbox" style="display: none">
       <block type="heart"></block>
       <block type="heart_image"></block>
+      <block type="sequence"></block>
     </xml>
     <script>
       var workspace = Blockly.inject('blocklyDiv',
