feat (design-system): style dictionary example

--- a/design-system/style-dictionary/src/index.html
+++ b/design-system/style-dictionary/src/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../build/css/variables.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
+  <link href="../build/css/classes.css" rel="stylesheet">
 </head>
 <body>
-  <button class="btn-primary">Primary</button>
+  <p><button class="btn btn-primary">Primary</button></p>
+  <p><button class="btn btn-secondary">Secondary</button></p>
 </body>
 </html>
