--- a/design-system/style-dictionary/src/classes-resolved/index.html
+++ b/design-system/style-dictionary/src/classes-resolved/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../build/css/variables.css" rel="stylesheet">
-  <link href="../build/css/classes.css" rel="stylesheet">
+  <link href="../../build/css/classes-resolved.css" rel="stylesheet">
 </head>
 <body>
   <p><button class="btn btn-primary">Primary</button></p>
