update (frameworks/react): decomposing the example

--- a/frameworks/react/2-basic-jsx/index.html
+++ b/frameworks/react/2-basic-jsx/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React App</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
     const { createRoot } = ReactDOM;
     const root = createRoot(document.getElementById('root'));
     root.render(
-      <button>Hello React!</button>
+      <h1>The dinosaur jumped into the mud.</h1>
     );
   </script>
 </body>
