feat (framework/react): first version of React basics

--- a/frameworks/react/2-basic-jsx/index.html
+++ b/frameworks/react/2-basic-jsx/index.html
@@ -12,11 +12,12 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script  type="text/babel">
-    const { createRoot } = ReactDOM;
-    const root = createRoot(document.getElementById('root'));
+    const { createRoot } = ReactDOM
+    const root = createRoot(document.getElementById('root'))
+
     root.render(
-      <h1>The dinosaur jumped into the mud.</h1>
-    );
+      <h1>Velocirest</h1>
+    )
   </script>
 </body>
 </html>
