--- a/frameworks/react/1-basic-raw/index.html
+++ b/frameworks/react/1-basic-raw/index.html
@@ -11,12 +11,13 @@
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
   
   <script>
-    const { createRoot } = ReactDOM;
-    const { createElement } = React;
-    const root = createRoot(document.getElementById('root'));
+    const { createRoot } = ReactDOM
+    const root = createRoot(document.getElementById('root'))
+
+    const { createElement } = React
     root.render(
-      createElement('h1', null, 'The dinosaur jumped into the mud.')
-    );
+      createElement('h1', null, 'Velocirest')
+    )
   </script>
 </body>
 </html>
