--- a/frameworks/react/2-basic-jsx/index.html
+++ b/frameworks/react/2-basic-jsx/index.html
@@ -12,8 +12,9 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script  type="text/babel">
-    const { createRoot } = ReactDOM
-    const root = createRoot(document.getElementById('root'))
+    const root = ReactDOM.createRoot(
+      document.getElementById('root')
+    )
 
     root.render(
       <h1>Velocirest</h1>
