--- a/frameworks/react/2-basic-jsx/index.html
+++ b/frameworks/react/2-basic-jsx/index.html
@@ -7,8 +7,8 @@
 <body>
   <div id="root"></div>
 
-  <script src="https://unpkg.com/react/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
