update (frameworks/prolog): scrollbar

--- a/frameworks/tau-prolog/index.html
+++ b/frameworks/tau-prolog/index.html
@@ -146,6 +146,11 @@
             word-break: break-word;
         }
         
+        #batchOutput {
+            max-height: 500px;
+            overflow-y: auto;
+        }
+        
         .error {
             color: #d32f2f;
         }
